--- a/src/index.css
+++ b/src/index.css
@@ -1,24 +1,28 @@
-@font-face {
-  font-family: 'usuazi_hosomozi';
-  src: url(./Font/usuazi_hosomozi.woff2) format('woff2'),
-    url(./Font/usuazi_hosomozi.woff) format('woff');
+/* @font-face {
+  font-family: 'Usuazi_hosomozi';
+  src: url(./Font/usuazi_hosomozi.woff2) format('woff2')
+      format('embedded-opentype'),
+    url(./Font/usuazi_hosomozi.woff) format('woff') format('embedded-opentype');
 }
-
 html,
 body,
-button,
-input,
-a,
 h1,
 h2,
 h3,
 h4,
 h5,
 h6,
+button,
 span,
-div {
+a {
+  font-family: 'Usuazi_hosomozi';
+} */
+
+body {
   margin: 0;
-  font-family: usuazi_hosomozi;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
